added navbar, bannar and partners

--- a/index.html
+++ b/index.html
@@ -7,8 +7,47 @@
     <link rel="stylesheet" href="Styles/style.css">
 </head>
 <body>
-    <header></header>
-    <main>This is The End</main>
+    <div class="wrapper">
+        <header>
+        <section class="nav-bar display-flex">
+            <h3 class="brand">Influencer Gear</h3>
+            <ul type="none" class="nav-links display-flex">
+            <li>Home</li>
+            <li>Products</li>
+            <li>Sign up</li>
+            <li>Log In </li>
+            <li><img width="24px" height="24px" src="assets/images/icons/search-icon.png" alt=""></li>
+            <li> <img width="36px" height="36px" src="assets/images/icons/cart-icon.png" alt=""></li>    
+
+            </ul>
+        </section>
+        <section class="banner display-flex">
+            <div class="banner-txt">
+                <h1 class="banner-title">Start your Journey as 
+                 Influencer</h1>
+                <p class="banner-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem vestibulum sed scelerisque eros. Lectus faucibus.</p>
+                <button  class="banner-btn btn"><p>Preebook now</p> <img width="24px" height="24px" style="filter: invert(1);" src="assets/images/icons/right-arrow.png" alt=""></button>
+            </div>
+            <div class="banner-img display-flex">
+                <img src="assets/images/main-camera.png" alt="">
+            </div>
+        </section>
+    </header>
+    <main>
+        <section class="partners display-flex">
+            <img src="assets/logos/Alibaba.svg" alt="">
+            <img src="assets/logos/Amazon.svg" alt="">
+            <img src="assets/logos/Daraz.pk Logo.svg" alt="">
+            <img src="assets/logos/Ebay.svg" alt="">
+            <img src="assets/logos/Rakuten.svg" alt="">
+            <img src="assets/logos/Target.svg" alt="">
+            <img src="assets/logos/Walmart.svg" alt="">
+        </section>
+        <section class="popular-collection">
+
+        </section>
+    </main>
     <footer></footer>
+    </div>
 </body>
 </html>
