some section addeded newly

--- a/index.html
+++ b/index.html
@@ -44,6 +44,93 @@
             <img src="assets/logos/Walmart.svg" alt="">
         </section>
         <section class="popular-collection">
+        <h3 class="popular-collection-title">Popular Collection</h3>
+        <div class="product-cards">
+        <div class="product-card">
+            <img src="assets/images/tripod.png" alt="" class="p-img">
+            <h3 class="p-name">Flex Tripod</h3>
+            <h4 class="p-price">$50.48</h4>
+            <p class="p-rating"></p>
+            <p class="p-desc">Wordwide shifting <br> available <br>
+             Buyers protection possible!</p>   
+        </div>
+        <div class="product-card">
+            <img src="assets/images/mic.png" alt="" class="p-img">
+            <h3 class="p-name">Microphone</h3>
+            <h4 class="p-price">$120.25</h4>
+            <p class="p-rating"></p>
+            <p class="p-desc">Wordwide shifting <br> available <br>
+             Buyers protection possible!</p>   
+        </div>
+        <div class="product-card">
+            <img src="assets/images/airpod.png" alt="" class="p-img">
+            <h3 class="p-name">Airbuds</h3>
+            <h4 class="p-price">$100.00</h4>
+            <p class="p-rating"></p>
+            <p class="p-desc">Wordwide shifting <br> available <br>
+             Buyers protection possible!</p>   
+        </div>
+        <div class="product-card">
+            <img src="assets/images/drone.png" alt="" class="p-img">
+            <h3 class="p-name">Drone</h3>
+            <h4 class="p-price">$980.25</h4>
+            <p class="p-rating"></p>
+            <p class="p-desc">Wordwide shifting <br> available <br>
+             Buyers protection possible!</p>   
+        </div>
+        <div class="product-card">
+            <img src="assets/images/lights.png" alt="" class="p-img">
+            <h3 class="p-name">Light Setup</h3>
+            <h4 class="p-price">$1200.00</h4>
+            <p class="p-rating"></p>
+            <p class="p-desc">Wordwide shifting <br> available <br>
+             Buyers protection possible!</p>   
+        </div>
+        <div class="product-card">
+            <img src="assets/images/setup.png" alt="" class="p-img">
+            <h3 class="p-name">Photoshoot Set</h3>
+            <h4 class="p-price">$120.40</h4>
+            <p class="p-rating"></p>
+            <p class="p-desc">Wordwide shifting <br> available <br>
+             Buyers protection possible!</p>   
+        </div>
+        <div class="product-card">
+            <img src="assets/images/camera.png" alt="" class="p-img">
+            <h3 class="p-name">Vlogging Camera</h3>
+            <h4 class="p-price">$18.80</h4>
+            <p class="p-rating"></p>
+            <p class="p-desc">Wordwide shifting <br> available <br>
+             Buyers protection possible!</p>   
+        </div>
+        <div class="product-card">
+            <img src="assets/images/single-light.png" alt="" class="p-img">
+            <h3 class="p-name">Green Screen</h3>
+            <h4 class="p-price">$25.48</h4>
+            <p class="p-rating"></p>
+            <p class="p-desc">Wordwide shifting <br> available <br>
+             Buyers protection possible!</p>   
+        </div>
+        <div class="product-card">
+            <img src="assets/images/action.png" alt="" class="p-img">
+            <h3 class="p-name">Action Camera</h3>
+            <h4 class="p-price">$380.00</h4>
+            <p class="p-rating"></p>
+            <p class="p-desc">Wordwide shifting <br> available <br>
+             Buyers protection possible!</p>   
+        </div>
+        </div>
+        <div class="see-more"><p >see more</p> <img width="24px" height="24px" src="assets/images/icons/right-arrow.png" alt=""></div>
+        </section>
+
+        <section class="featured display-flex">
+         <div class="featured-img">
+            <img src="assets/images/gear.png" alt="">
+         </div>
+         <div class="featured-txt">
+            <h2 class="featured-title">Featured products at one place</h2>
+            <p class="featured-desc">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+            <button class="featured-btn btn"><p>Join Now</p><img width="24px" height="24px" style="filter: invert(1);" src="assets/images/icons/right-arrow.png" alt=""></button>
+         </div>
 
         </section>
     </main>
