--- a/index.html
+++ b/index.html
@@ -134,7 +134,17 @@
 
         </section>
     </main>
-    <footer></footer>
+    <footer class="display-flex">
+        <h4 class="f-title">Influencer products</h4>
+        <p class="f-desc1"> @Copyright 2020  influencer products</p>
+        <p class="f-desc2">All rights reserved</p>
+        <ul type="none" class="socials display-flex">
+         <li><a href=""><img src="assets/images/icons/insta.png" alt=""></a></li>
+         <li><a href=""><img src="assets/images/icons/web.png" alt=""></a></li>
+         <li><a href=""><img src="assets/images/icons/twiter.png" alt=""></a></li>
+         <li><a href=""><img src="assets/images/icons/youtube.png" alt=""></a></li>
+        </ul>
+    </footer>
     </div>
 </body>
 </html>
