--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <img src="assets/images/tripod.png" alt="" class="p-img">
             <h3 class="p-name">Flex Tripod</h3>
             <h4 class="p-price">$50.48</h4>
-            <p class="p-rating"></p>
+            <p class="p-rating"><span class="golden">★★★★☆</span> <span class="gray">4.99</span></p>
             <p class="p-desc">Wordwide shifting <br> available <br>
              Buyers protection possible!</p>   
         </div>
@@ -62,7 +62,7 @@
             <img src="assets/images/mic.png" alt="" class="p-img">
             <h3 class="p-name">Microphone</h3>
             <h4 class="p-price">$120.25</h4>
-            <p class="p-rating"></p>
+            <p class="p-rating"><span class="golden">★★★★☆</span> <span class="gray">4.99</span></p>
             <p class="p-desc">Wordwide shifting <br> available <br>
              Buyers protection possible!</p>   
         </div>
@@ -70,7 +70,7 @@
             <img src="assets/images/airpod.png" alt="" class="p-img">
             <h3 class="p-name">Airbuds</h3>
             <h4 class="p-price">$100.00</h4>
-            <p class="p-rating"></p>
+            <p class="p-rating"><span class="golden">★★★★☆</span> <span class="gray">4.99</span></p>
             <p class="p-desc">Wordwide shifting <br> available <br>
              Buyers protection possible!</p>   
         </div>
@@ -78,7 +78,7 @@
             <img src="assets/images/drone.png" alt="" class="p-img">
             <h3 class="p-name">Drone</h3>
             <h4 class="p-price">$980.25</h4>
-            <p class="p-rating"></p>
+            <p class="p-rating"><span class="golden">★★★★☆</span> <span class="gray">4.99</span></p>
             <p class="p-desc">Wordwide shifting <br> available <br>
              Buyers protection possible!</p>   
         </div>
@@ -86,7 +86,7 @@
             <img src="assets/images/lights.png" alt="" class="p-img">
             <h3 class="p-name">Light Setup</h3>
             <h4 class="p-price">$1200.00</h4>
-            <p class="p-rating"></p>
+            <p class="p-rating"><span class="golden">★★★★☆</span> <span class="gray">4.99</span></p>
             <p class="p-desc">Wordwide shifting <br> available <br>
              Buyers protection possible!</p>   
         </div>
@@ -94,7 +94,7 @@
             <img src="assets/images/setup.png" alt="" class="p-img">
             <h3 class="p-name">Photoshoot Set</h3>
             <h4 class="p-price">$120.40</h4>
-            <p class="p-rating"></p>
+            <p class="p-rating"><span class="golden">★★★★☆</span> <span class="gray">4.99</span></p>
             <p class="p-desc">Wordwide shifting <br> available <br>
              Buyers protection possible!</p>   
         </div>
@@ -102,7 +102,7 @@
             <img src="assets/images/camera.png" alt="" class="p-img">
             <h3 class="p-name">Vlogging Camera</h3>
             <h4 class="p-price">$18.80</h4>
-            <p class="p-rating"></p>
+            <p class="p-rating"><span class="golden">★★★★☆</span> <span class="gray">4.99</span></p>
             <p class="p-desc">Wordwide shifting <br> available <br>
              Buyers protection possible!</p>   
         </div>
@@ -110,7 +110,7 @@
             <img src="assets/images/single-light.png" alt="" class="p-img">
             <h3 class="p-name">Green Screen</h3>
             <h4 class="p-price">$25.48</h4>
-            <p class="p-rating"></p>
+            <p class="p-rating"><span class="golden">★★★★☆</span> <span class="gray">4.99</span></p>
             <p class="p-desc">Wordwide shifting <br> available <br>
              Buyers protection possible!</p>   
         </div>
@@ -118,7 +118,7 @@
             <img src="assets/images/action.png" alt="" class="p-img">
             <h3 class="p-name">Action Camera</h3>
             <h4 class="p-price">$380.00</h4>
-            <p class="p-rating"></p>
+            <p class="p-rating"><span class="golden">★★★★☆</span> <span class="gray">4.99</span></p>
             <p class="p-desc">Wordwide shifting <br> available <br>
              Buyers protection possible!</p>   
         </div>
