arrow color converted to pink

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
              Buyers protection possible!</p>   
         </div>
         </div>
-        <div class="see-more"><p >see more</p> <img width="24px" height="24px" src="assets/images/icons/right-arrow.png" alt=""></div>
+        <div class="see-more"><p >see more</p> <img class="pink-arrow" width="24px" height="24px" src="assets/images/icons/right-arrow.png" alt=""></div>
         </section>
 
         <section class="featured display-flex">
