banners photo resized

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
             <li>Products</li>
             <li>Sign up</li>
             <li>Log In </li>
-            <li><img width="24px" height="24px" src="assets/images/icons/search-icon.png" alt=""></li>
-            <li> <img width="36px" height="36px" src="assets/images/icons/cart-icon.png" alt=""></li>    
+            <li id="search"><img width="24px" height="24px" src="assets/images/icons/search-icon.png" alt=""></li>
+            <li id="cart"> <img width="36px" height="36px" src="assets/images/icons/cart-icon.png" alt=""></li>    
             </ul>
         </section>
         <section class="banner display-flex">
