second last change for phone screen styles adding

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </div>
         </section>
     </header>
-    <main class="hide">
+    <main class="">
         <section class="partners display-flex">
             <img src="assets/logos/Alibaba.svg" alt="">
             <img src="assets/logos/Amazon.svg" alt="">
@@ -135,12 +135,14 @@
          <div class="featured-txt">
             <h2 class="featured-title">Featured products at one place</h2>
             <p class="featured-desc">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
-            <button class="featured-btn btn"><p>Join Now</p><img width="24px" height="24px" style="filter: invert(1);" src="assets/images/icons/right-arrow.png" alt=""></button>
+            <div class="featured-btn-container">
+                <button class="featured-btn btn"><p>Join Now</p><img width="24px" height="24px" style="filter: invert(1);" src="assets/images/icons/right-arrow.png" alt=""></button>
+            </div>
          </div>
 
         </section>
     </main>
-    <footer class="display-flex hide">
+    <footer class="display-flex">
         <h4 class="f-title">Influencer products</h4>
         <p class="f-desc1"> @Copyright 2020  influencer products</p>
         <p class="f-desc2">All rights reserved</p>
